Обновление лекции и структуры

--- a/content/lectures.tex
+++ b/content/lectures.tex
@@ -28,8 +28,9 @@
         \item Теория очередей: МАС как инструмент моделирования потоков и взаимодействий.
     \end{itemize}
     \item Типы МАС: кооперативные, конкурентные, смешанные.
-    \item Примеры междисциплинарных приложений: транспортные системы (управление трафиком), энергетика (умные сети), экономика (аукционы).
-    \item Инструменты моделирования МАС: AnyLogic, NetLogo, SPADE.
+    \item Осовременить! Примеры междисциплинарных приложений: транспортные системы (управление трафиком), энергетика (умные сети), экономика (аукционы).
+    \item Заметка! Роевой интеллект
+    %\item Инструменты моделирования МАС: AnyLogic, NetLogo, SPADE.
 \end{itemize}
 
 % Lecture 2
